# ozone

./: .clang-tidy  .clangd  CMakeLists.txt  LICENSE  README.md
src/: main.cpp  main.cu
src/cephes/: cephes.cpp  cephes.hpp
src/cpu/frequency/: frequency.cpp  frequency.hpp
src/cpu_tests/frequency/: frequency.cpp  frequency.hpp
src/cuda_tests/frequency/: frequency.cu  frequency.h
src/utils/: utils.cpp  utils.hpp
